gcc/testsuite/rust/rustc/ui/parser/removed-syntax-uniq-mut-expr.rs
fn main() {
    let a_box = box mut 42; // { dg-error "" "" { target *-*-* } }
}

